# Newsletter

./: .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
newsletter/api/: admin.py  models.py  serializers.py  urls.py  views.py
newsletter/api/migrations/: 0001_initial.py  0002_alter_message_status.py  0003_alter_newsletter_tags.py
newsletter/clients/: models.py  serializers.py  urls.py  validators.py  views.py
newsletter/clients/migrations/: 0001_initial.py  0002_alter_client_timezone.py
newsletter/newsletter/: settings.py  urls.py
